# chop-editor

./: .gitignore  Cargo.toml  README.md  change_plist.py  codesign.sh
editor/: Cargo.toml
editor/src/: main.rs
shell/: Cargo.toml
shell/src/: main.rs
src/: app.rs  buffer.rs  filter_map.rs  lib.rs  main.rs  pane.rs  render.rs  renderer.rs
