[package]
name = "chop"
version = "0.1.0"
edition = "2021"

[dependencies]
glutin = "0.31"
gl = "0.14.0"
glium = "0.33.0"
rusttype = "0.9.3"
# im = "15.1.0"

log = "0.4.18"
env_logger = "0.10.0"
term_size = "0.3.2"
unicode-segmentation = "1.10.1"
glutin-winit = "0.4"
winit = "0.29"
raw-window-handle = {version = "0.5", default-features = false}
arc-swap = "1.6.0"
crossbeam = "0.8.2"

[replace]
"glium:0.33.0" = { path = "/Users/jason/src/glium" }
