[package]
name = "chop"
version = "0.1.0"
edition = "2021"

[dependencies]
# we need a newer version than 0.30.5 for custom apple events
winit = { git = "https://github.com/rust-windowing/winit", rev = "fc6cf89a" }
env_logger = "0.11.2"
log = "0.4.18"
term_size = "0.3.2"
unicode-segmentation = "1.10.1"
raw-window-handle = {version = "0.5", default-features = false}
arc-swap = "1.6.0"
crossbeam = "0.8.2"
pollster = "0.3.0"
crop = { version = "0.4.2", features = ["graphemes"] }
im = "15.1.0"
chrono = "0.4.38"
objc2 = "0.5.2"
objc2-app-kit = {version = "0.2.2", features = ["NSApplication", "NSResponder"]}
objc2-foundation = {version = "0.2.2", features = ["NSThread"]}
vello = "0.3.0"
futures = "0.3.31"
anyhow = "1.0.93"

# debugging
signal-hook = "0.3"

[package.metadata.bundle]
name = "Chop"
identifier = "com.jasoneveleth.chop"
icon = ["assets/32x32.png", "assets/128x128.png", "assets/128x128@2x.png"]
version = "1.0.0"
copyright = "Copyright © 2024 Jason Eveleth"
category = "Utility"
short_description = "Slice and dice your files."
