[package]
name = "chop-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29.10"
vello = { path = "../vello" }
env_logger = "0.11.2"
log = "0.4.18"
term_size = "0.3.2"
unicode-segmentation = "1.10.1"
raw-window-handle = {version = "0.5", default-features = false}
arc-swap = "1.6.0"
crossbeam = "0.8.2"
pollster = "0.3.0"
crop = { version = "0.4.2", features = ["graphemes"] }
im = "15.1.0"

